--- a/index.html
+++ b/index.html
@@ -174,29 +174,28 @@
 				<p> That with you, I can't be there </p>
 				<p> To celebrate your special day </p>
 				<p> In the best possible way. </p>
-				<p> However... </p>
+				<p> However..., I understand </p>
 				<p> Now things are different in lockdown </p>
-				<p> "May an adventure filled</p>
-				<p> year awaits you," </p>
-				<p> "have a prosperous and joyful</p>
-				<p> year of your life," </p>
+				<p> "May an adventure filled
+					year awaits you", </p>
+				<p> "have a prosperous and joyful
+					year of your life", </p>
 				<p> Ila chepdam </p>
-				<p> wroth anipinchaledu </p>
+				<p> worth anipinchaledu </p>
 				<p> so, </p>
-				<p> Let me share... </p>
-				<p> a piece of happiness to you </p>
+				<p> a piece of happiness laa</p>
 				<p> na chitti burra nundi </p>
 				<p> chitti kosam vachina </p>
 				<p> chitti alochana tho </p>
 				<p> chesina chitti prayathnam edi... </p>
-				<p> as a Birthday present </p>
-				<p> Nachindaaa? </p>
-				<p> I wish to be beside you to see... </p>
+				<p> as a Birthday present</p>
+				<p> I wish </p>
+				<p> to be beside you to see... </p>
 				<p> Expressions on your cute face </p>
 				<p> Chivaraga... </p>
 				<p> I'd like to wish you one more time </p>
 				<p> a very happy birthday Jumbarthi Niharika </p>
-
+				<p> Nachindaaa ?? </p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
